--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.4",
+    "framer-motion": "^11.3.4",
+    "leaflet": "^1.9.4",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "postcss": "^8",
