--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "netlify-cli": "^17.33.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
